Add footer with copyright information

--- a/index.html
+++ b/index.html
@@ -10,4 +10,7 @@
   <p>We are launching soon.</p>
   <p>Visit us again shortly.</p>
 </body>
+<footer>
+  <p>© 2025 AquaPure Packaged Drinking Water. All rights reserved.</p>
+</footer>
 </html>
