Update footer copyright text to JK Aqua

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <p>We are launching soon.</p>
   <p>Visit us again shortly.</p>
 <footer>
-  <p>© 2025 AquaPure Packaged Drinking Water. All rights reserved.</p>
+  <p>© 2025 JK Aqua. All rights reserved.</p>
 </footer>
 </body>
 
